live-migration-ephemeral-vm/3-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: hello-app
  name: hello-app
  namespace: ephemeral-live-migration
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
  - image: openshift/hello-openshift:v3.9.0
    name: hello-app
    ports:
    - containerPort: 8080
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
          - ALL
    resources:
      limits:
        cpu: 100m
        memory: 250Mi
      requests:
        cpu: 25m
        memory: 50Mi
  dnsPolicy: ClusterFirst
  restartPolicy: Always
