live-migration-ephemeral-vm/5-services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: hello-service
    namespace: ephemeral-live-migration
  spec:
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: hello-app
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: nginx-service
    namespace: ephemeral-live-migration
  spec:
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: nginx-ephemeral
    sessionAffinity: None
    type: ClusterIP
kind: List
metadata:
  resourceVersion: ""
