live-migration-ephemeral-vm/6-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
  namespace: ephemeral-live-migration
spec:
  path: /
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: nginx-service
    weight: 100
  wildcardPolicy: None
